public/css/master.css
/* ... */
.product-holder .product-item p {
  color: #1a3f72;
  font-size: 12px;
  line-height: 12px;
  font-weight: normal;
  font-family: 'Open Sans', sans-serif;
  margin: 0 0 5px 0;
  padding: 0;
  text-align: left;
}
.product-holder .product-item p:first-of-type {
  max-height: 36px;
  overflow: hidden;
}
.product-holder .product-item p:last-of-type {
  font-weight: bold;
}
.product-holder .product-item img {
  position: relative;
  top: 0;
  left: 0;
  right: 0;
  margin: auto;
  max-width: 100%;
  height: auto;
  max-height: 106px;
}
.product-holder .product-item .product-info{
  position: absolute;
  bottom: 32px;
}
.btn-product-moreinfo, .btn-product-moreinfo:visited, .btn-product-moreinfo:hover, .btn-product-moreinfo:focus {
  color: #fff;
  font-size: 18px;
  line-height: 18px;
  font-weight: normal;
  font-family: 'Open Sans', sans-serif;
  background: #1a3f72;
  border: 0;
  border-radius: 0;
  margin: 0;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
}
.product-details{

}
.product-details label{
  color: #000;
  text-align: left;
  font-size: 14px;
  line-height: 21px;
  font-weight: normal;
  font-family: 'Open Sans', sans-serif;

}
.product-details img{
  max-width: 250px;
  max-height: 500px;
  margin: 0 15px 15px 0;
}
.product-details h1{
  font-size: 23px;
  line-height: 23px;

}
.product-details p{
  margin-bottom: 0;
}
.product-details p.price{
  color: #1a3f72;
  font-weight: bold;
}
.product-details .checkbox{
  margin-top: 0;
}
.product-details .checkbox label{
  font-size: 14px;
}
.product-nav-pills li{
  margin-top: 5px;
  margin-bottom: 5px;
}
.product-nav-pills li a,
.product-nav-pills li a:focus,
.product-nav-pills li a:visited,
.product-nav-pills li a:hover{
  color: #000;
  text-align: left;
  font-size: 14px;
  line-height: 21px;
  font-family: 'Open Sans', sans-serif;
  border: 1px solid #ccc;
}
.product-nav-pills li.active a,
.product-nav-pills li.active a:focus,
.product-nav-pills li.active a:visited,
.product-nav-pills li.active a:hover{
  color: #fff;
  background: #1a3f72;
}
.justified-list{
  display: inline-block;
  list-style: none;
  font-size: 19px;
  line-height: 26px;
  margin-bottom: 15px;
}
.justified-list li:nth-child(odd){
  float: left;
  width: 35%;
}
.justified-list li:nth-child(even){
  float: left;
  width: 65%;
}
input[type="number"].form-control{
  max-width: 90px;
}
.btn-addcart, .btn-addcart:visited, .btn-addcart:hover, .btn-addcart:focus {
  color: #fff;
  font-size: 21px;
  line-height: 21px;
  font-family: 'Open Sans', sans-serif;
  background: #1a3f72;
  border: 0;
  border-radius: 10px;
}
.btn-contactindex, .btn-contactindex:visited, .btn-contactindex:hover, .btn-contactindex:focus {
  color: #fff;
  font-size: 33px;
  line-height: 33px;
  font-family: 'Open Sans', sans-serif;
  background: #1a3f72;
  width: 100%;
  border: 0;
  margin-bottom: 0;
}
.btn-default, .btn-default:visited, .btn-default:hover, .btn-default:focus {
  color: #fff;
  font-size: 18px;
  line-height: 18px;
  font-weight: normal;
  font-family: 'Open Sans', sans-serif;
  background: #1a3f72;
  background-color: #1a3f72;
  text-decoration: none;
  border: 1px solid #1a3f72;
  margin-bottom: 0;
}
.btn-default.disabled{
  background: #1a3f72;
  background-color: #1a3f72;
  color: #fff;
  opacity: .7;
}
#admin_tab_panel .tab-content{
  padding-top: 20px;
}
table td .btn{
  margin-bottom: 5px;
}
.attribute-option-group .option-group{
  border-top: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  padding: 15px 0px;
}
.modal-body textarea.form-control{
  max-width: 100%;
}
.btn-danger{
  color: #fff!important;
}
td a.btn-default{
  width: 100%;
  text-decoration: none;
}
.btn-cancel, .btn-cancel:visited, .btn-cancel:hover, .btn-cancel:focus {
  background: #fff;
  font-size: 18px;
  line-height: 18px;
  font-weight: normal;
  font-family: 'Open Sans', sans-serif;
  border: 1px solid #ccc;
  margin-bottom: 0;
}
td a.btn-cancel{
  text-decoration: none;
  width: 100%;
}
.row-footernav {
  padding: 60px 0 20px 0;
}
.sidebar-contact {
  margin-top: 5px;
  padding: 20px;
  background: #f1f0f0;
}
.sidebar-contact h1 {
  color: #292929;
  font-size: 33px;
  line-height: 33px;
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  margin: 0;
  padding: 0;
}
.sidebar-contact strong {
  color: #1a3f72;
  font-weight: 800;
}
.sidebar-contact .form-control {
  margin-top: 15px;
  font-size: 16px;
  line-height: 16px;
  font-family: 'Open Sans', sans-serif;
}
.sidebar-contact textarea {
  resize: none;
  height: 100px;
}
.btn-contactsidebar, .btn-contactsidebar:visited, .btn-contactsidebar:hover, .btn-contactsidebar:focus {
  color: #fff;
  font-size: 33px;
  line-height: 33px;
  font-family: 'Open Sans', sans-serif;
  background: #1a3f72;
  width: 100%;
  border: 0;
  border-radius: 0;
  margin-bottom: 15px;
}
#order_information_table table td,
#order_information_table table th{
  padding: 2px 8px;
}
.footer {
  margin-top: -143px;
  padding: 45px 0 15px 0;
  background: rgba(78, 78, 78, 0.9);
}
.footer p {
  color: #b9b6b5;
  font-size: 14px;
  line-height: 21px;
  font-family: 'Open Sans', sans-serif;
  margin: 0 0 15px 0;
}
.footer a, .footer a:focus, .footer a:visited, .footer a:hover {
  color: #b9b6b5;
  font-size: 14px;
  line-height: 21px;
  font-family: 'Open Sans', sans-serif;
}
.footer-nav {
  margin: 0 0 30px 0;
  list-style: none;
  display: inline-block;
}
.footer-nav li {
  position: relative;
  margin: 0;
  padding: 0px 5px;
  display: inline-block;
}
.footer-nav li:not(:last-child)::after {
  position: absolute;
  top: 1px;
  right: -8px;
  content: "|";
  color: #fff;
  font-size: 18px;
  line-height: 21px;
  font-family: 'Open Sans', sans-serif;
}
.footer li a, .footer li a:visited, .footer li a:hover, .footer li a:focus {
  color: #fff;
  font-size: 18px;
  line-height: 21px;
  font-family: 'Open Sans', sans-serif;
}
/* ... */

